completed the documentation for all the auth controllers
