# config/swagger.json
@@ -109,11 +109,28 @@
 										"refreshToken"
 									],
 									"type": "object"
+								},
+								"examples": {
+									"Example 1": {
+										"value": {
+											"user": {
+												"name": "TestUser",
+												"role": "Admin"
+											},
+											"accessToken": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VybmFtZSI6InRlc3QiLCJwYXNzd29yZCI6InRlc3QiLCJuYW1lIjoiS2FyYW4iLCJyb2xlIjoiQWRtaW4iLCJpYXQiOjE2OTk3ODIzMzcsImV4cCI6MTY5OTc4MjkzN30.fjakJ978Ps_QvAeGFuM71h_bRiX1vNon4712O5yHi3k",
+											"type": "Bearer",
+											"refreshToken": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VybmFtZSI6InRlc3QiLCJwYXNzd29yZCI6InRlc3QiLCJuYW1lIjoiS2FyYW4iLCJyb2xlIjoiQWRtaW4iLCJpYXQiOjE2OTk3ODIzMzd9.PEMFsfQLK4wjQ_Pf3_HxBH-RBZsCLuf72I57peEv1mM"
+										}
+									}
 								}
 							}
 						}
 					}
 				},
+				"description": "Logs in a user with their username and password.",
+				"tags": [
+					"Authentication"
+				],
 				"security": [],
 				"parameters": [],
 				"requestBody": {
@@ -154,11 +171,22 @@
 										"refreshToken"
 									],
 									"type": "object"
+								},
+								"examples": {
+									"Example 1": {
+										"value": {
+											"refreshToken": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VybmFtZSI6InRlc3QiLCJwYXNzd29yZCI6InRlc3QiLCJuYW1lIjoiS2FyYW4iLCJyb2xlIjoiQWRtaW4iLCJpYXQiOjE2OTk3NDA1NDl9.SX3TDJipA621FrpHBEJKnyKKEVbrbxbLziOHn8xIJUc"
+										}
+									}
 								}
 							}
 						}
 					}
 				},
+				"description": "Generates a new access and refresh token using the provided refresh token.",
+				"tags": [
+					"Authentication"
+				],
 				"security": [],
 				"parameters": [],
 				"requestBody": {
@@ -181,6 +209,10 @@
 						"description": "No content"
 					}
 				},
+				"description": "Logs out the user by revoking the provided refresh token.",
+				"tags": [
+					"Authentication"
+				],
 				"security": [],
 				"parameters": [],
 				"requestBody": {
